# worklease

./: .gitignore  AGENTS.md  README.md  backlog.config.yml  lefthook.yml  mise.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
docs/: claim-model.md  source-provider-sdk-compatibility.md
docs/backlog/: config.yml
docs/backlog/tasks/: task-1 - Extract-and-publish-provider-neutral-work-lease-tool.md  task-10 - Add-versioned-resource-policy-plugins.md  task-11 - Publish-source-provider-extension-SDK.md  task-12 - Stabilize-the-public-API-and-JSON-schemas.md  task-13 - Add-non-argv-claim-credential-input.md  task-14 - Add-safe-state-retention-and-garbage-collection.md  task-15 - Upgrade-GitHub-Actions-runtimes.md  task-16 - Pin-release-toolchain-and-GitHub-Actions.md  task-17 - Complete-explicit-human-readable-CLI-output.md  task-18 - Make-guarded-execution-worktree-safe.md  task-19 - Simplify-release-installation-and-compact-README.md  task-2 - Add-Ruff-and-Lefthook-checks.md  task-20 - Make-Worklease-skills-portable-across-agents.md  task-21 - Fix-platform-dependent-verbose-status-CI-regression.md  task-22 - Audit-completed-project-implementation-and-effectiveness.md  task-23 - Make-human-readable-text-the-default-CLI-output.md  task-24 - Add-bounded-blocking-lease-acquisition.md  task-25 - Improve-CLI-help-discoverability.md  task-26 - Restore-colored-grouped-CLI-help.md  task-27 - Document-CLI-lease-defaults.md  task-28 - Audit-CLI-flag-defaults.md  task-29 - Add-agent-facing-CLI-discovery-guidance.md  task-3 - Add-generalized-Worklease-source-workflow.md  task-30 - Add-aggregate-CLI-help-for-agent-discovery.md  task-31 - Version-agent-help-links-for-releases.md  task-32 - Compact-human-readable-list-output.md  task-33 - Show-minimum-examples-in-every-CLI-command-help.md  task-34 - Improve-actionable-CLI-errors.md  task-35 - Preserve-resource-boundaries-in-compact-list-output.md  task-36 - Show-help-for-no-argument-CLI-invocation.md  task-37 - Document-Worklease-claim-entities-and-relationships.md  (+8 more)
scripts/: embed_release_metadata.py  install-release.sh  release_artifacts.py  release_installer.py
skills/: AGENTS.md
skills/worklease-source-workflow/: SKILL.md
skills/worklease-workflow/: SKILL.md
src/worklease/: __init__.py  __main__.py  _release_metadata.py  cli.py  credentials.py  execution.py  execution_context.py  locking.py  models.py  replacement.py  sqlite.py  store.py
tests/: test_adapters.py  test_cli.py  test_credentials.py  test_execution.py  test_gc.py  test_package_smoke.py  test_policy_plugins.py  test_release.py  test_schemas.py  test_skills.py  test_store.py
tests/fixtures/resource-policy-plugin/: fixture_policy.py  pyproject.toml
(+48 files in other folders)
