[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "worklease"
version = "0.2.0"
description = "Provider-neutral same-host work leases"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Worklease contributors" }]
dependencies = []

[project.scripts]
worklease = "worklease.cli:main"

[dependency-groups]
dev = [
    "jsonschema>=4.25.0",
    "ruff>=0.15.21",
]
release = [
    "hatchling==1.31.0",
    "pyinstaller==6.21.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv]
default-groups = ["dev", "release"]

[tool.hatch.build.targets.wheel]
packages = ["src/worklease"]
